Made changes to mobile so that info was left aligned instead of center. Also fixed a bug where if some info was taken off an entry, the next location would not render either. - Denny Min

--- a/css/styles.css
+++ b/css/styles.css
@@ -272,13 +272,19 @@ span {
 }
 
 /* Main Display */
+.time-and-location {
+  position: relative;
+  left: 20px;
+}
+
 .time-and-location > h1 {
   font-size: 1.6rem;
   margin: 5px auto;
 }
 
 .time-and-location > h3 {
-  margin: 20px auto;
+  margin: 20px 0;
+  max-width: 80%;
 }
 
 .transparent-background-color {
@@ -309,9 +315,9 @@ span {
   transition: background-color 0.3s;
 }
 
-.greeting {
+/* .greeting {
   max-width: 10rem;
-}
+} */
 
 .primary:hover,
 .previews > div:hover {
@@ -380,9 +386,9 @@ span {
   text-align: center;
 }
 
-.mobile-center-to-left {
+/* .mobile-center-to-left {
   text-align: center;
-}
+} */
 
 .hidden {
   display: none;
@@ -468,8 +474,6 @@ span {
 
   .time-and-location > h1 {
     font-size: 2rem;
-    position: relative;
-    left: 30px;
   }
 
   .background-box-dimensions {
@@ -479,11 +483,6 @@ span {
 
   .mobile-center-to-left {
     text-align: left;
-  }
-
-  .time-and-location > h3 {
-    position: relative;
-    left: 30px;
   }
 
   .header-links > h4 {
